Color Management - Use Curves - crash #75443

Closed
opened 2020-04-06 13:35:20 +02:00 by Marek Trejbal · 8 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-04-05 22:52, hash: d0d20de183
Worked: Blender 2.82a

Short description of error
Enabled "Use Curves" in Color Management will cause Blender crash, when you render image and manipulate with wires in compositor.

Exact steps for others to reproduce the error

  1. Enable "Use Curves" in "Color Management"
  2. Render image
  3. Manipulate with wires in compositor
  4. Blender will crash

Blender-2-83-11_bug_Color-Management.blend

Blender-2-83-11_bug_Color-Management.jpg

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-04-05 22:52, hash: `d0d20de183` Worked: Blender 2.82a **Short description of error** Enabled "Use Curves" in Color Management will cause Blender crash, when you render image and manipulate with wires in compositor. **Exact steps for others to reproduce the error** 1. Enable "Use Curves" in "Color Management" 2. Render image 3. Manipulate with wires in compositor 4. Blender will crash [Blender-2-83-11_bug_Color-Management.blend](https://archive.blender.org/developer/F8452667/Blender-2-83-11_bug_Color-Management.blend) ![Blender-2-83-11_bug_Color-Management.jpg](https://archive.blender.org/developer/F8452666/Blender-2-83-11_bug_Color-Management.jpg)
Author

Added subscriber: @MarekTrejbal

Added subscriber: @MarekTrejbal
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Confirmed, checking...

Confirmed, checking...
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Bisected this to 7dd0be9554.

1  __memmove_avx_unaligned_erms                                          0x7ffff0083a65 
2  BKE_curvemapping_premultiply                   colortools.c      837  0x2a75bf8      
3  curve_mapping_to_ocio_settings                 colormanagement.c 3940 0x327128a      
4  update_glsl_display_processor                  colormanagement.c 4016 0x3271671      
5  IMB_colormanagement_setup_glsl_draw_from_space colormanagement.c 4092 0x327180e      
6  gpu_viewport_draw_colormanaged                 gpu_viewport.c    645  0x9b2b2f5      
7  GPU_viewport_draw_to_screen_ex                 gpu_viewport.c    741  0x9b2b812      
8  GPU_viewport_draw_to_screen                    gpu_viewport.c    753  0x9b2b842      
9  wm_draw_region_blit                            wm_draw.c         487  0x2ea5f59      
10 wm_draw_window_onscreen                        wm_draw.c         742  0x2ea6a8d      
11 wm_draw_window                                 wm_draw.c         811  0x2ea6d65      
12 wm_draw_update                                 wm_draw.c         1014 0x2ea738b      
13 WM_main                                        wm.c              456  0x2ea3f0b      
14 main                                           creator.c         524  0x2a636c9

CC @fclem

Bisected this to 7dd0be9554. ``` 1 __memmove_avx_unaligned_erms 0x7ffff0083a65 2 BKE_curvemapping_premultiply colortools.c 837 0x2a75bf8 3 curve_mapping_to_ocio_settings colormanagement.c 3940 0x327128a 4 update_glsl_display_processor colormanagement.c 4016 0x3271671 5 IMB_colormanagement_setup_glsl_draw_from_space colormanagement.c 4092 0x327180e 6 gpu_viewport_draw_colormanaged gpu_viewport.c 645 0x9b2b2f5 7 GPU_viewport_draw_to_screen_ex gpu_viewport.c 741 0x9b2b812 8 GPU_viewport_draw_to_screen gpu_viewport.c 753 0x9b2b842 9 wm_draw_region_blit wm_draw.c 487 0x2ea5f59 10 wm_draw_window_onscreen wm_draw.c 742 0x2ea6a8d 11 wm_draw_window wm_draw.c 811 0x2ea6d65 12 wm_draw_update wm_draw.c 1014 0x2ea738b 13 WM_main wm.c 456 0x2ea3f0b 14 main creator.c 524 0x2a636c9 ``` CC @fclem
Clément Foucault self-assigned this 2020-04-15 18:22:26 +02:00

This issue was referenced by e08ac50a5c

This issue was referenced by e08ac50a5ce384e62786bc3b67344414fd8d25aa

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:38:06 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75443
No description provided.